...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="IntValue"
                android:textAppearance="?android:textAppearanceLarge" />

            <SeekBar
                android:id="@+id/seek_int_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:max="100" />
        </TableRow>
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="OrdinalLabel"
                android:textAppearance="?android:textAppearanceLarge" />

            <Spinner
                android:id="@+id/spinner_ordinal_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1" />
        </TableRow>

...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Checked"
                android:textAppearance="?android:textAppearanceLarge" />

            <Switch
                android:id="@+id/switch_checked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1" />
        </TableRow>

...
