<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/element_spacing_normal">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/item_background"
            android:orientation="horizontal"
            android:padding="@dimen/element_spacing_normal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Input here"
                android:textAppearance="?android:textAppearanceLarge" />

            <EditText
                android:id="@+id/edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:imeOptions="actionGo"
                android:inputType="text"
                android:max="100" />

            <Button
                android:id="@+id/button_go"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="GO" />
        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.cardview.widget.CardView>
