<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <Space
        android:id="@+id/space_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/element_spacing_normal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/item_background"
            android:gravity="center_vertical"
            android:padding="@dimen/element_spacing_normal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="?android:textAppearanceLarge"
                tools:text="This is label" />

            <CheckBox
                android:id="@+id/check_opened"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/btn_open_close"
                android:padding="@dimen/element_spacing_normal" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
